// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`require-try-catch-async rule invalid cases Async IIFE without try/catch or @safe 1`] = `
[
  {
    "column": 6,
    "endColumn": 6,
    "endLine": 4,
    "line": 2,
    "message": "Async functions must include try/catch or be marked with an exact @safe comment directly above the function.",
    "nodeType": "ArrowFunctionExpression",
    "ruleId": "@custom-typescript-eslint/require-try-catch-async",
    "severity": 2,
  },
]
`;

exports[`require-try-catch-async rule invalid cases Async arrow function without try/catch or @safe 1`] = `
[
  {
    "column": 23,
    "endColumn": 8,
    "endLine": 4,
    "line": 2,
    "message": "Async functions must include try/catch or be marked with an exact @safe comment directly above the function.",
    "nodeType": "ArrowFunctionExpression",
    "ruleId": "@custom-typescript-eslint/require-try-catch-async",
    "severity": 2,
  },
]
`;

exports[`require-try-catch-async rule invalid cases Async function inside class method without try/catch 1`] = `
[
  {
    "column": 24,
    "endColumn": 10,
    "endLine": 5,
    "line": 3,
    "message": "Async functions must include try/catch or be marked with an exact @safe comment directly above the function.",
    "nodeType": "FunctionExpression",
    "ruleId": "@custom-typescript-eslint/require-try-catch-async",
    "severity": 2,
  },
]
`;

exports[`require-try-catch-async rule invalid cases Async function with unrelated comment 1`] = `
[
  {
    "column": 7,
    "endColumn": 8,
    "endLine": 5,
    "line": 3,
    "message": "Async functions must include try/catch or be marked with an exact @safe comment directly above the function.",
    "nodeType": "FunctionDeclaration",
    "ruleId": "@custom-typescript-eslint/require-try-catch-async",
    "severity": 2,
  },
]
`;

exports[`require-try-catch-async rule invalid cases Async function without try/catch or @safe 1`] = `
[
  {
    "column": 7,
    "endColumn": 8,
    "endLine": 4,
    "line": 2,
    "message": "Async functions must include try/catch or be marked with an exact @safe comment directly above the function.",
    "nodeType": "FunctionDeclaration",
    "ruleId": "@custom-typescript-eslint/require-try-catch-async",
    "severity": 2,
  },
]
`;

exports[`require-try-catch-async rule invalid cases Misspelled @safe comment is ignored 1`] = `
[
  {
    "column": 5,
    "endColumn": 6,
    "endLine": 5,
    "line": 3,
    "message": "Invalid @safe usage: Only "@safe" by itself is allowed to skip try/catch in async functions.",
    "nodeType": "FunctionDeclaration",
    "ruleId": "@custom-typescript-eslint/require-try-catch-async",
    "severity": 2,
  },
]
`;

exports[`require-try-catch-async rule invalid cases Non-leading @safe comment is ignored 1`] = `
[
  {
    "column": 5,
    "endColumn": 6,
    "endLine": 5,
    "line": 2,
    "message": "Async functions must include try/catch or be marked with an exact @safe comment directly above the function.",
    "nodeType": "FunctionDeclaration",
    "ruleId": "@custom-typescript-eslint/require-try-catch-async",
    "severity": 2,
  },
]
`;
